--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
